--- a/teste-git/index.html
+++ b/teste-git/index.html
@@ -1,1 +1,12 @@
-print "curso de programação"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>testando Git</title>
+</head>
+<body>
+    input ("Qual o seu nome?")
+    
+</body>
+</html>
